--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-content: center;
+}
+.heading {
+  display: flex;
+  flex-direction: row;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+h1 {
+  float: left;
+  font-size: 5rem;
+  font-weight: normal;
+  text-align: center;
+  padding: 2.5rem 12rem;
+  background-color: rgb(207, 202, 202);
 }
 
-.App-link {
-  color: #61dafb;
+.week-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.days-content{
+  display: flex;
+  flex-direction: column;
+  align-content: space-between;
+  min-height: 17rem;
+  min-width: 13rem;
+  border: 2px solid black;
+  /*border-right: 1px; */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/* .days-content:last-child{
+  min-height: 17rem;
+  min-width: 13rem;
+  border: 2px solid black;
+} */
